tests/fail/d006_if_not_bool.dew
# D006: type mismatch — if condition must be Bool
def main = fn () {
    if 42 { 1 } else { 0 }
}
